# Space_Shooter_Cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  makeit.sh
include/: Ship.h  astroid.h  bullet.h  levels.h  menu.h  raylib.h  settings.h
src/: Ship.cpp  Ship.h  Space_Shooter_Cpp.cpp  Space_Shooter_Cpp.h  astroid.cpp  bullet.cpp  bullet.h  constants.cpp  levels.cpp  main.cpp  settings.cpp
